--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME="nombreApp"
+APP_ENV=production
+APP_KEY=base64:DUf8VfVux6rIv2JvlgbZikhbzDOklFRga6WNR2oRrnk=
+APP_DEBUG=false
+APP_URL=http://tt.movu.app
 
 LOG_CHANNEL=stack
 
